# Real-Time_Interview_Coaching_System

./: README.md  SETUP_GUIDE.md  no_looking_cam_optimzed.py  no_loooking_camera.py  small_interview_helper.py
backend/: README.md  head_pose_detector.py  main.py  pyproject.toml  requirements.txt  server.py  speech_analyzer.py  start.sh
frontend/: bun.lockb  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx  InterviewContext.tsx
frontend/src/hooks/: useInterviewMetrics.ts
frontend/src/lib/: firebase.ts  firestore.ts  pdfGenerator.ts
frontend/src/pages/: Index.tsx  Interview.tsx  Login.tsx  Report.tsx  SpeechTest.tsx
