[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.124.4",
    "mediapipe==0.10.8",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "torch>=2.9.1",
    "uvicorn[standard]>=0.38.0",
    "webrtcvad-wheels>=2.0.10; platform_system == 'Windows'",
    "webrtcvad>=2.0.10; platform_system != 'Windows'",
    "websockets>=15.0.1",
]
